--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,8 +90,8 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            ghcr.io/${{ github.repository_owner }}/rtsper:${{ github.sha }}
-            ghcr.io/${{ github.repository_owner }}/rtsper:latest
+            ghcr.io/${{ toLower(github.repository_owner) }}/rtsper:${{ github.sha }}
+            ghcr.io/${{ toLower(github.repository_owner) }}/rtsper:latest
           labels: |
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.source=${{ github.repository }}
