--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,12 @@ jobs:
       - name: Set up Docker buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Compute image owner (lowercase)
+        run: |
+          OWNER=$(echo "${GITHUB_REPOSITORY}" | cut -d'/' -f1)
+          OWNER_LOWER=$(echo "$OWNER" | tr '[:upper:]' '[:lower:]')
+          echo "IMAGE_OWNER=$OWNER_LOWER" >> $GITHUB_ENV
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -90,8 +96,8 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            ghcr.io/${{ toLower(github.repository_owner) }}/rtsper:${{ github.sha }}
-            ghcr.io/${{ toLower(github.repository_owner) }}/rtsper:latest
+            ghcr.io/${{ env.IMAGE_OWNER }}/rtsper:${{ github.sha }}
+            ghcr.io/${{ env.IMAGE_OWNER }}/rtsper:latest
           labels: |
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.source=${{ github.repository }}
