--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,6 +81,11 @@ jobs:
           OWNER_LOWER=$(echo "$OWNER" | tr '[:upper:]' '[:lower:]')
           echo "IMAGE_OWNER=$OWNER_LOWER" >> $GITHUB_ENV
 
+      - name: Compute short SHA
+        run: |
+          # create a 7-char short SHA for image tags
+          echo "SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -96,7 +101,7 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            ghcr.io/${{ env.IMAGE_OWNER }}/rtsper:${{ github.sha }}
+            ghcr.io/${{ env.IMAGE_OWNER }}/rtsper:${{ env.SHORT_SHA }}
             ghcr.io/${{ env.IMAGE_OWNER }}/rtsper:latest
           labels: |
             org.opencontainers.image.revision=${{ github.sha }}
