--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,8 @@ jobs:
           echo "SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
 
       - name: Log in to GitHub Container Registry
-        if: github.ref == 'refs/heads/main'
+        # Skip GHCR login when running under local 'act' (env.ACT == 'true')
+        if: github.ref == 'refs/heads/main' && env.ACT != 'true'
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -95,7 +96,8 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
-        if: github.ref == 'refs/heads/main'
+        # Skip build/push when running under local 'act' (env.ACT == 'true')
+        if: github.ref == 'refs/heads/main' && env.ACT != 'true'
         uses: docker/build-push-action@v5
         with:
           context: .
