--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,48 @@ on:
 permissions:
   contents: read
   packages: write
+  security-events: write
 
 jobs:
+  trivy-scan:
+    name: Trivy — repository scan
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Run Trivy filesystem scan (table)
+        uses: aquasecurity/trivy-action@v1
+        with:
+          scan-type: 'fs'
+          scan-path: '.'
+          format: 'table'
+          exit-code: '0'
+          severity: 'CRITICAL,HIGH'
+          vuln-type: 'os,library'
+
+      - name: Save Trivy SARIF report
+        run: |
+          docker run --rm -v "${{ github.workspace }}:/project" aquasecurity/trivy:latest \
+            fs --format sarif --severity CRITICAL,HIGH --exit-code 0 --output /project/trivy-report-${{ github.run_id }}.sarif /project || true
+
+      - name: Upload SARIF to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: ./trivy-report-${{ github.run_id }}.sarif
+
+      - name: Upload Trivy results (artifact)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-report-${{ github.run_id }}
+          path: |
+            ./trivy-report* || true
+
+  # end trivy-scan
   test-and-build:
+    needs: trivy-scan
     runs-on: ubuntu-latest
 
     steps:
@@ -69,11 +108,51 @@ jobs:
       - name: Build linux binary
         run: CGO_ENABLED=0 GOOS=linux go build -o rtsper ./cmd/rtsper
 
+  build-and-push:
+    needs: test-and-build
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' && env.ACT != 'true'
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Compute image owner (lowercase)
+        run: |
+          OWNER=$(echo "${GITHUB_REPOSITORY}" | cut -d'/' -f1)
+          OWNER_LOWER=$(echo "$OWNER" | tr '[:upper:]' '[:lower:]')
+          echo "IMAGE_OWNER=$OWNER_LOWER" >> $GITHUB_ENV
+
+      - name: Compute short SHA
+        run: |
+          echo "SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker buildx
         uses: docker/setup-buildx-action@v2
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: contrib/docker-compose/Dockerfile
+          push: true
+          platforms: linux/amd64,linux/arm64
+          tags: |
+            ghcr.io/${{ env.IMAGE_OWNER }}/rtsper:${{ env.SHORT_SHA }}
+            ghcr.io/${{ env.IMAGE_OWNER }}/rtsper:latest
+          labels: |
+            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.source=${{ github.repository }}
 
       # NOTE: Image build & push moved to the security workflow so that Trivy
       # image scanning runs first and only allows pushes when it succeeds.
