--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,7 +123,10 @@ jobs:
   build-and-push:
     needs: test-and-build
     runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/main' && env.ACT != 'true' }}
+    # Run only on main branch and avoid running during local `act` runs by
+    # checking the actor (act typically uses 'nektos/act'). Using `env` in a
+    # workflow-level `if` is not supported, so check `github.actor` instead.
+    if: ${{ github.ref == 'refs/heads/main' && github.actor != 'nektos/act' }}
 
     steps:
       - name: Checkout
