--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,14 +34,11 @@ jobs:
           rm -rf "$HOME/.cache/go-build" || true
 
       - name: Run Trivy filesystem scan (table)
-        uses: aquasecurity/trivy-action@v1
-        with:
-          scan-type: 'fs'
-          scan-path: '.'
-          format: 'table'
-          exit-code: '0'
-          severity: 'CRITICAL,HIGH'
-          vuln-type: 'os,library'
+        # The official Trivy Action tag may not be resolvable in some runners;
+        # run the Trivy container directly to produce a human-readable table.
+        run: |
+          docker run --rm -v "${{ github.workspace }}:/project" aquasecurity/trivy:latest \
+            fs --format table --severity CRITICAL,HIGH --exit-code 0 /project
 
       - name: Save Trivy SARIF report
         continue-on-error: true
