--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Run Trivy filesystem scan (table)
         # Pin trivy-action to a released version that supports SARIF and
         # stable behavior on GitHub Actions runners.
-        uses: aquasecurity/trivy-action@v0.33.1
+        uses: aquasecurity/trivy-action@0.33.1
         with:
           scan-type: 'fs'
           scan-path: '.'
