ci: only run push-triggered CI on main to avoid duplicate runs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,9 @@ name: CI
 
 on:
   push:
-    branches: ["**"]
+    # Only run push-triggered CI on the main branch to avoid duplicate runs
+    # when pushing to feature branches that have open pull requests.
+    branches: ["main"]
   pull_request:
     branches: ["**"]
 
