--- a/contrib/docker-compose/docker-compose-multi.yml
+++ b/contrib/docker-compose/docker-compose-multi.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   rtsper1:
-    image: ghcr.io/florina-alfred/rtsper:latest
+    image: rtsper:local
     container_name: rtsper1
     ports:
       - "9191:9191" # publisher port (rtsper1)
@@ -11,12 +11,14 @@ services:
     environment:
       - CLUSTER_NODES=rtsper1,rtsper2,rtsper3
       - NODE_NAME=rtsper1
-    command: ["--log-level=warn"]
+      - LOG_LEVEL=warn
+      - ENABLE_PROXY=true
+      - OTEL_ENDPOINT=otel-collector:4317
     networks:
       - rtsnet
 
   rtsper2:
-    image: ghcr.io/florina-alfred/rtsper:latest
+    image: rtsper:local
     container_name: rtsper2
     ports:
       - "9193:9191" # publisher port (rtsper2) mapped to host 9193
@@ -25,12 +27,14 @@ services:
     environment:
       - CLUSTER_NODES=rtsper1,rtsper2,rtsper3
       - NODE_NAME=rtsper2
-    command: ["--log-level=warn"]
+      - LOG_LEVEL=warn
+      - ENABLE_PROXY=true
+      - OTEL_ENDPOINT=otel-collector:4317
     networks:
       - rtsnet
 
   rtsper3:
-    image: ghcr.io/florina-alfred/rtsper:latest
+    image: rtsper:local
     container_name: rtsper3
     ports:
       - "9195:9191" # publisher port (rtsper3) mapped to host 9195
@@ -39,7 +43,9 @@ services:
     environment:
       - CLUSTER_NODES=rtsper1,rtsper2,rtsper3
       - NODE_NAME=rtsper3
-    command: ["--log-level=warn"]
+      - LOG_LEVEL=warn
+      - ENABLE_PROXY=true
+      - OTEL_ENDPOINT=otel-collector:4317
     networks:
       - rtsnet
 
@@ -50,6 +56,17 @@ services:
       - ../prometheus/rules.yml:/etc/prometheus/rules.yml:ro
     ports:
       - "9090:9090"
+    networks:
+      - rtsnet
+
+  otel-collector:
+    image: otel/opentelemetry-collector:latest
+    container_name: otel-collector
+    command: ["--config", "/etc/otel/collector-config.yaml"]
+    volumes:
+      - ../otel-collector/collector-config.yaml:/etc/otel/collector-config.yaml:ro
+    ports:
+      - "4317:4317" # OTLP gRPC
     networks:
       - rtsnet
 
