--- a/contrib/docker-compose/docker-compose-multi.yml
+++ b/contrib/docker-compose/docker-compose-multi.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   rtsper1:
-    image: rtsper:local
+    image: ghcr.io/florina-alfred/rtsper:latest
     container_name: rtsper1
     ports:
       - "9191:9191" # publisher port (rtsper1)
@@ -18,7 +18,7 @@ services:
       - rtsnet
 
   rtsper2:
-    image: rtsper:local
+    image: ghcr.io/florina-alfred/rtsper:latest
     container_name: rtsper2
     ports:
       - "9193:9191" # publisher port (rtsper2) mapped to host 9193
@@ -34,7 +34,7 @@ services:
       - rtsnet
 
   rtsper3:
-    image: rtsper:local
+    image: ghcr.io/florina-alfred/rtsper:latest
     container_name: rtsper3
     ports:
       - "9195:9191" # publisher port (rtsper3) mapped to host 9195
