--- a/contrib/docker-compose/docker-compose.yml
+++ b/contrib/docker-compose/docker-compose.yml
@@ -2,10 +2,7 @@ version: '3.8'
 
 services:
   rtsper1:
-    build:
-      context: ../../
-      dockerfile: contrib/docker-compose/Dockerfile
-    image: rtsper:local
+    image: ghcr.io/florina-alfred/rtsper:latest
     container_name: rtsper1
     ports:
       - "9191:9191" # publisher port (rtsper1)
@@ -19,10 +16,7 @@ services:
       - rtsnet
 
   rtsper2:
-    build:
-      context: ../../
-      dockerfile: contrib/docker-compose/Dockerfile
-    image: rtsper:local
+    image: ghcr.io/florina-alfred/rtsper:latest
     container_name: rtsper2
     ports:
       - "9193:9191" # publisher port (rtsper2) mapped to host 9193
