--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -279,12 +279,12 @@ jobs:
           # referenced images are already manifest lists; imagetools handles
           # both image types and is preferred on modern runners.
           docker buildx imagetools create -t ghcr.io/${{ env.IMAGE_OWNER }}/rtsper:${{ env.SHORT_SHA }} \
-            ghcr.io/${{ env.IMAGE_OWNER }}/rtsper:${{ env.SHORT_SHA }}-linux-amd64 \
-            ghcr.io/${{ env.IMAGE_OWNER }}/rtsper:${{ env.SHORT_SHA }}-linux-arm64
+          ghcr.io/${{ env.IMAGE_OWNER }}/rtsper:${{ env.SHORT_SHA }}-linux-amd64 \
+          # ghcr.io/${{ env.IMAGE_OWNER }}/rtsper:${{ env.SHORT_SHA }}-linux-arm64
 
           docker buildx imagetools create -t ghcr.io/${{ env.IMAGE_OWNER }}/rtsper:latest \
             ghcr.io/${{ env.IMAGE_OWNER }}/rtsper:${{ env.SHORT_SHA }}-linux-amd64 \
-            ghcr.io/${{ env.IMAGE_OWNER }}/rtsper:${{ env.SHORT_SHA }}-linux-arm64
+            # ghcr.io/${{ env.IMAGE_OWNER }}/rtsper:${{ env.SHORT_SHA }}-linux-arm64
 
       # NOTE: Image build & push moved to the security workflow so that Trivy
       # image scanning runs first and only allows pushes when it succeeds.
